--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="resources/js/angular147.js"></script>
 
     <script src="resources/js/angular-route.js"></script>
+
     <script src="resources/js/angular-animate147.js"></script>
     <script src="resources/js/angular-ui-router.js"></script>
     <script src="resources/js/ui-bootstrap-tpls-0.14.3.js"></script>
@@ -35,7 +36,7 @@
     <script src="controllers/eventList-modal.controller.js"></script>
 
     <script src="directive/calendar.directive.js"></script>
-    <script src="directive/validateTime.directive.js"></script>
+    <script src="directive/timeLeft.directive.js"></script>
     <script src="directive/timePointer.directive.js"></script>
     <script src="services/calendar.service.js"></script>
     <script src="services/storage.service.js"></script>
